this Homepage part

--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-  <!-- header part -->
-   <header>
+  <!-- Header part -->
+  <header>
     <h1>Welcome to TechCon 2025</h1>
     <p>Your gateway to the latest in technology and innovation.</p>
     <nav>
@@ -20,33 +20,30 @@
         <li><a href="./contact.html">Contact</a></li>
       </ul>
     </nav>
-   </header>
+  </header>
 
-   <!-- Main Section -->
-    <main>
+  <!-- Main Section -->
+  <main>
+    <section id="conference">
+      <h2>Web Dev Conference 2025</h2>
+      <p>
+        The Web Dev Conference 2025 is a premier event bringing together developers, designers, and tech enthusiasts from around the world to explore the future of web technologies and innovation.
+      </p>
 
-  <section id="conference">
-    <h2>Web Dev Conference 2025</h2>
-    <p>The Web Dev Conference 2025 is a premier event bringing together developers, designers, and tech enthusiasts from around the world to explore the future of web technologies and innovation.</p>
+      <video controls width="600" aria-label="Promotional video for Web Dev Conference 2025">
+        <source src="../Assets/sample%20videos.mp4" type="video/mp4">
+        <track src="promo-subtitles.vtt" kind="subtitles" srclang="en" label="English">
+        Your browser does not support the video tag.
+        <a href="../Assets/sample%20videos.mp4">Download the video</a> instead.
+      </video>
+    </section>
+  </main>
 
-    <video controls width="600">
-      <source src="../Assets/sample videos.mp4" type="video/mp4">
-      <track src="promo-subtitles.vtt" kind="subtitles" srclang="en" label="English">
-     
-    </video>
-  </section>
-
-
-
-
-
-</main>
-
-<!-- //footer part -->
-
-<footer>
-  <p>&copy; 2025 Annual Web Innovations Conference. All rights reserved. <br>Explicitly: Copyright 2025.</p>
-</footer>
+  <!-- Footer part -->
+  <footer>
+    <p>&copy; 2025 Annual Web Innovations Conference. All rights reserved. <br>
+    Explicitly: Copyright 2025.</p>
+  </footer>
 
 </body>
 </html>
