this is Homepage

--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -23,18 +23,17 @@
 
   <!-- Main Section -->
   <main>
-    <section id="conference">
-      <h2>Web Dev Conference 2025</h2>
-      <p>
-        The Web Dev Conference 2025 is a premier event bringing together developers, designers, and tech enthusiasts from around the world to explore the future of web technologies and innovation.
-      </p>
+  <section id="conference">
+    <h2>Welcome to TechCon 2024</h2>
+    <p>This is a brief introduction to the TechCon 2024 event.</p>
+    <video controls>
+      <source src="assets/techcon-promo.mp4" type="video/mp4">
+      <track src="assets/techcon-subtitles.vtt" kind="subtitles" srclang="en" label="English">
+      Your browser does not support the video tag. <a href="assets/techcon-promo.mp4">Download video</a>
+    </video>
+  </section>
+</main>
 
-      <video controls width="600" aria-label="Promotional video for Web Dev Conference 2025">
-        <source src="../Assets/sample%20videos.mp4" type="video/mp4">
-        <track src="promo-subtitles.vtt" kind="subtitles" srclang="en" label="English">
-      </video>
-    </section>
-  </main>
 
   <!-- Footer part -->
   <footer>
