this is last Homepage

--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-  <!-- Header part -->
+  Header part
   <header>
     <h1>Welcome to TechCon 2025</h1>
     <p>Your gateway to the latest in technology and innovation.</p>
@@ -21,7 +21,7 @@
     </nav>
   </header>
 
-  <!-- Main Section -->
+  Main Section
   <main>
   <section id="conference">
     <h2>Welcome to TechCon 2024</h2>
@@ -33,12 +33,53 @@
     </video>
   </section>
 </main>
-
-
-  <!-- Footer part -->
-  <footer>
+  Footer part -->
+  <!-- <footer>
     <p>&copy; 2025 Annual Web Innovations Conference. All rights reserved. <br>
     Explicitly: Copyright 2025.</p>
+  </footer>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TechCon 2024</title>
+</head>
+<body>
+
+  <!-- Header Section -->
+  <header>
+    <h1>TechCon 2024</h1>
+    <nav>
+      <ul>
+        <li><a href="about.html">About</a></li>
+        <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="register.html">Register</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Main Content Section -->
+  <main>
+    <section>
+      <h2>Welcome to TechCon 2024</h2>
+      <p>Join leading innovators, tech enthusiasts, and industry experts at TechCon 2024 for a deep dive into the latest technology trends, workshops, and networking opportunities.</p>
+      
+      <video controls width="600">
+        <source src="media/techcon_promo.mp4" type="video/mp4">
+        <track src="media/techcon_captions.vtt" kind="subtitles" srclang="en" label="English">
+        Your browser does not support the video tag.
+      </video>
+    </section>
+  </main>
+
+  <!-- Footer Section -->
+  <footer>
+    <p>&copy; 2024 TechCon Conference. All rights reserved. <br>Explicitly: copyright</p>
   </footer>
 
 </body>
