--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -24,16 +24,13 @@
   <main>
     <table border="1" style="width: 100%; border-collapse: collapse;">
       <caption>Detailed Schedule of Events for TechCon 2024</caption>
-      <tr>
-        <thead>
+      <thead>
         <tr>
-          <th >Time</th>
-          <th >Session</th>
-          <th >Speaker</th>
+          <th scope="col">Time</th>
+          <th scope="col">Session</th>
+          <th scope="col">Speaker</th>
         </tr>
       </thead>
-      </tr>
-      
       <tbody>
         <tr>
           <td>09:00 AM - 10:00 AM</td>
