schedule.html files

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Schedule for TechCon 2024</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-  <!-- Header -->
   <header>
     <h1>Schedule for TechCon 2024</h1>
     <nav>
@@ -20,9 +20,8 @@
     </nav>
   </header>
 
-  <!-- Main Content -->
   <main>
-    <table border="1" style="width: 100%; border-collapse: collapse;">
+    <table>
       <caption>Detailed Schedule of Events for TechCon 2024</caption>
       <thead>
         <tr>
@@ -34,43 +33,46 @@
       <tbody>
         <tr>
           <td>09:00 AM - 10:00 AM</td>
-          <td>Opening Keynote: The Future of AI</td>
-          <td>Alex Jones</td>
+          <td>Opening Keynote: The Future of Tech</td>
+          <td>Dr. Ava Reynolds</td>
         </tr>
         <tr>
           <td>10:15 AM - 11:00 AM</td>
-          <td>Cybersecurity in 2024</td>
-          <td>Maria Lee</td>
+          <td>AI & Machine Learning Trends</td>
+          <td>Marcus Lin</td>
         </tr>
         <tr>
           <td>11:15 AM - 12:00 PM</td>
-          <td>Building Scalable Web Apps</td>
-          <td>Daniel Kim</td>
+          <td>Web 3.0 and Blockchain</td>
+          <td>Priya Singh</td>
         </tr>
         <tr>
           <td>01:00 PM - 02:00 PM</td>
-          <td>Panel: Women in Tech</td>
-          <td>Various Speakers</td>
+          <td>Cybersecurity in 2024</td>
+          <td>Ahmed Noor</td>
         </tr>
         <tr>
           <td>02:15 PM - 03:00 PM</td>
-          <td>Intro to Quantum Computing</td>
-          <td>Dr. Lina Patel</td>
+          <td>Cloud Computing Essentials</td>
+          <td>Linda Zhao</td>
         </tr>
         <tr>
           <td>03:15 PM - 04:00 PM</td>
-          <td>TechCon Hackathon Briefing</td>
-          <td>Event Committee</td>
+          <td>Panel Discussion: Women in Tech</td>
+          <td>Various Speakers</td>
+        </tr>
+        <tr>
+          <td>04:15 PM - 05:00 PM</td>
+          <td>Closing Remarks & Networking</td>
+          <td>Event Organizers</td>
         </tr>
       </tbody>
     </table>
   </main>
 
-  <!-- Footer -->
   <footer>
-    <p>&copy; 2024 TechCon Conference. All rights reserved. <br>Explicitly: copyright</p>
+    <p>&copy; 2024 TechCon. All rights reserved.</p>
   </footer>
 
 </body>
 </html>
-
