--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -71,7 +71,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 TechCon. All rights reserved.</p>
+    <p>&copy; 2024 TechCon Conference. All rights reserved. <br>Explicitly: copyright</p>
   </footer>
 
 </body>
